<resources>
    <string name="app_name">会議室予約システム</string>
    <string name="title_home">予約</string>
    <string name="title_dashboard">予約履歴</string>
    <string name="title_notifications">使用履歴</string>
    <string name="room">会議室</string>
    <string name="yymmdd">日付</string>
    <string name="start_time">開始時間</string>
    <string name="end_time">終了時間</string>
    <string name="reserve_button">予約申請</string>
    <string name="reservedialog">aaa</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">時</string>
    <string name="min">分</string>

    <string name="roomNo1">会議室１</string>
    <string name="roomNo2">会議室２</string>
    <string name="roomNo3">会議室３</string>
    <string-array name="kaigiList">
        <item>会議室１</item>
        <item>会議室２</item>
        <item>会議室３</item>
    </string-array>
    <string name="yyyy">年</string>
    <string name="mm">月</string>
    <string name="dd">日</string>
    <string name="hh">時</string>
    <string name="ss">分</string>
    <string name="chaincodeId">chaincodeId</string>
    <string name="chaincode">sample</string>
    <string name="funcId">func</string>

    <string name="func_offer">offer</string>
    <string name="func_queryReserveLogs">queryReserveLogs</string>
    <string name="func_queryUseLogs">queryUseLogs</string>

    <string name="userId">userId</string>
    <string name="roomNo">roomNo</string>
    <string name="startTime">startTime</string>
    <string name="endTime">endTime</string>
    <string name="invoke_url">http://118.27.17.126:8080/invoke</string>
    <string name="query_url">http://118.27.17.126:8080/query</string>

    <string name="dialog_toast_success">予約完了しました</string>
    <string name="dialog_toast_err_zengo">開始時間が終了時間よりもあとに設定されています</string>
    <string name="dialog_toast_err_kako">過去の日付で予約しています</string>
    <string name="dialog_toast_err_over">2時間以上の時間で予約はできません</string>
    <string name="dialog_toast_err_jufuku">既に予約が入っているため予約できませんでした</string>
    <string name="dialog_toast_err_noregist">使用のカードはユーザ登録されていません</string>
    <string name="dialog_toast_err_yoki">予期せぬエラー</string>
    <string name="dialog_toast_err_nores">サーバからの応答がありませんでした</string>

    <string name="dialog_toast_error_nouserid">NFCタグでユーザIDが登録されていません。</string>

    <string name="loading">実行中...</string>

    <string name="midashi_roomName">会議室</string>
    <string name="midashi_date">予定日</string>
    <string name="midashi_startHhmm">開始</string>
    <string name="midashi_EndHhmm">終了</string>
    <string name="midashi_status">状態</string>

    <string name="functype_reserve">reserve</string>
    <string name="functype_reserveLogs">reserveLogs</string>
    <string name="functype_useLogs">useLogs</string>

    <string name="nfctag_title">NFCタグ登録</string>
    <string name="nfctag_message">このアプリを使用するためにはユーザ登録されたNFCタグが必要です。NFCタグを携帯のNFCリーダにタッチしてください。</string>
    <string name="nfctag_please">NFCタグをかざしてください</string>

    <string name="nfctag_end_title">NFCタグ登録完了</string>

    <string name="userid_str">ユーザID</string>
    <string name="userid_noregist_str">未登録</string>

    <string name="status_yet">時間待</string>
    <string name="status_unlock">開錠可</string>
    <string name="status_end">終了</string>

    <string-array name="yyyyList">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="mmList">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="dd31List">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="dd30List">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string-array name="dd29List">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
    </string-array>
    <string-array name="dd28List">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>
    <string-array name="hhList">
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="ssList">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>58</item>
        <item>59</item>
    </string-array>
</resources>
